(Aula 3 - DevClub) - Experiência na prática em programação

--- a/style.css
+++ b/style.css
@@ -20,8 +20,20 @@ body {
     margin-bottom: 20px;
 }
 
+.caixa-imagens {
+    position: relative;
+}
+
 .imagem-celular {
-    width: 520px;
+    width: 450px;
+}
+
+.imagem-insta {
+    height: 525px;
+    position: absolute;
+    left: 151px;
+    top: 25px;
+
 }
 
 .caixa-form {
